Get the Mac to compute x-height as the real x-height. This is needed for precise MathML placements because x-height is also a core unit, b=154007, r=ftang, sr=sfraser